[project]
name = "lib-ml"
version = "0.1.0"
description = "Reusable preprocessing library for sentiment analysis"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nltk"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
